# Ai_Slopsquatting

./: .gitignore  CLAUDE.md  README.md  demo_test.py  github_typo_hunter.py
ai-slopsquatting_ver3/: README.md
ai-slopsquatting_ver3/slop-detector-extension/: content.js  popup.js
ai_slopsquatting_ver3/: docker-compose.yml  slop_manual_v2.json
ai_slopsquatting_ver3/slop-detector-extension/: background.js
secure_capstone/: docker-compose.yml
secure_capstone/api/: Dockerfile  main.py  slop_check.py
secure_capstone/reports/: architecture_diagram.html  detection_engine_design.md  email_cover.md  gen_overview_pdf.py  midterm_report.docx  midterm_report.md  presentation_script.md  progress_report.md  project_overview.md  references.md  review_guide.md  slop_report_2026-03-14T15-26-57.html  slop_report_2026-03-14T15-28-02.html  slop_report_2026-03-14T15-29-45.html  slop_report_2026-03-14T15-37-35.html  slop_report_2026-03-14T16-01-33.html  slop_report_2026-03-14T16-02-35.html  v2_design.md
secure_capstone/research/: .env.example  analyzer.py  config.py  database.py  llm_client.py  pipeline.py  questions.py  validator.py
slop-detector-extension/: background.js  manifest.json  popup.html  popup.js
slopsquatting_ver2/secure_capstone/__else/safe-npm/: pyproject.toml
slopsquatting_ver2/secure_capstone/__else/safe-npm/safe_npm.egg-info/: PKG-INFO
slopsquatting_ver2/secure_capstone/__else/safe-npm/tests/: test_similarity.py
vscode-slop-detector/: .vscodeignore  package-lock.json  package.json  slopsquatting-detector-0.1.0.vsix
vscode-slop-detector/src/: parser.ts  (+7 more)
(+38 files in other folders)
