[project]
name = "safe-npm"
version = "0.1.0"
description = "Pre-install package verifier against slopsquatting"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "rapidfuzz>=3.9.0"
]

[project.scripts]
safe-npm = "safe_npm.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["safe_npm"]